--- a/ArrayOperations/ArrayOperations.csproj
+++ b/ArrayOperations/ArrayOperations.csproj
@@ -2,9 +2,11 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <Configurations>Debug;Release;Any</Configurations>
         <Platforms>AnyCPU</Platforms>
+        <LangVersion>8</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
 
 </Project>
