--- a/ArrayOperations/ArrayOperations.csproj
+++ b/ArrayOperations/ArrayOperations.csproj
@@ -6,7 +6,7 @@
         <Configurations>Debug;Release;Any</Configurations>
         <Platforms>AnyCPU</Platforms>
         <LangVersion>8</LangVersion>
-        <Nullable>enable</Nullable>
+        <Nullable>disable</Nullable>
     </PropertyGroup>
 
 </Project>
