--- a/ArrayOperationTests/ArrayOperationTests.csproj
+++ b/ArrayOperationTests/ArrayOperationTests.csproj
@@ -8,14 +8,18 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="5.10.3"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-        <PackageReference Include="xunit" Version="2.4.0" />
-        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-        <PackageReference Include="coverlet.collector" Version="1.2.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0"/>
+        <PackageReference Include="xunit" Version="2.4.0"/>
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
+        <PackageReference Include="coverlet.collector" Version="1.2.0"/>
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\ArrayOperations\ArrayOperations.csproj" />
+        <ProjectReference Include="..\ArrayOperations\ArrayOperations.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Compile Remove="Helpers.cs"/>
     </ItemGroup>
 
 </Project>
