implement 'WriteLine' and 'WriteAllLines' methods and their tests.

--- a/CredentialsTests/CredentialsTests.csproj
+++ b/CredentialsTests/CredentialsTests.csproj
@@ -43,6 +43,12 @@
         <None Update="Output\placeholder.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="Input\read2.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Output\expected_multi_line.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
