move mocking files to another dir.

--- a/CredentialsTests/CredentialsTests.csproj
+++ b/CredentialsTests/CredentialsTests.csproj
@@ -36,19 +36,36 @@
         <None Update="Input\emptylines.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Output\placeholder.txt">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
         <None Update="Input\read2.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <None Update="Output\expected_multi_line.txt">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <None Update="Files\Input\empty.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Input\emptylines.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Input\read1.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Input\read2.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Output\expected_multi_line.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Output\placeholder.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\CredentialsManager\CredentialsManager.csproj"/>
+    </ItemGroup>
+
+    <ItemGroup>
+        <Folder Include="Credentials"/>
+        <Folder Include="Files"/>
     </ItemGroup>
 
 </Project>
