implement credentials logic

--- a/CredentialsManager/CredentialsManager.csproj
+++ b/CredentialsManager/CredentialsManager.csproj
@@ -8,4 +8,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <None Update="Users.txt">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+
 </Project>
