implement new exception and tests for cases when file can not be found or open.

--- a/CredentialsTests/CredentialsTests.csproj
+++ b/CredentialsTests/CredentialsTests.csproj
@@ -13,9 +13,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="5.10.3"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1"/>
-        <PackageReference Include="xunit" Version="2.4.1"/>
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+        <PackageReference Include="xunit" Version="2.4.1" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -52,7 +52,7 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="Files\Output\expected_multi_line.txt">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
         <None Update="Files\Output\placeholder.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -60,12 +60,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CredentialsManager\CredentialsManager.csproj"/>
+        <ProjectReference Include="..\CredentialsManager\CredentialsManager.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Folder Include="Credentials"/>
-        <Folder Include="Files"/>
+        <Folder Include="Credentials" />
+        <Folder Include="Files" />
     </ItemGroup>
 
 </Project>
