rename mock files for clearer purpose; fix failing test by replacing trim with proper split by line terminator.

--- a/CredentialsTests/CredentialsTests.csproj
+++ b/CredentialsTests/CredentialsTests.csproj
@@ -42,13 +42,13 @@
         <None Update="Files\Input\empty.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Files\Input\emptylines.txt">
+        <None Update="Files\Input\empty-lines.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Files\Input\read1.txt">
+        <None Update="Files\Input\read1-CRLF.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Files\Input\read2.txt">
+        <None Update="Files\Input\read2-LF.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
         <None Update="Files\Output\expected_multi_line.txt">
