--- a/CredentialsManagerTests/CredentialsManagerTests.csproj
+++ b/CredentialsManagerTests/CredentialsManagerTests.csproj
@@ -51,11 +51,11 @@
         <None Update="Files\Input\read2-LF.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
-        <None Update="Files\Output\expected_multi_line.txt">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
         <None Update="Files\Output\placeholder.txt">
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="Files\Output\existing_not_empty.txt">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
