Second draft for homework 4.

--- a/RecipeApp.Client/RecipeApp.Client.csproj
+++ b/RecipeApp.Client/RecipeApp.Client.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\RecipeApp.Core\RecipeApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Recipe.recipe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
