Added error handling for Register and Login methods

--- a/Authentication/Authentication/Authentication.csproj
+++ b/Authentication/Authentication/Authentication.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="Users.txt">
+    <None Update="Data\Users.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
