Moved Personlogic from Controller to Personclass.

--- a/ShoppingListApi/PersonPetsApi.csproj
+++ b/ShoppingListApi/PersonPetsApi.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="ShoppingListApi\obj\Debug\netcoreapp3.1\" />
+  </ItemGroup>
+
 
 </Project>
