--- a/Authentication/Authentication/Authentication.csproj
+++ b/Authentication/Authentication/Authentication.csproj
@@ -7,7 +7,10 @@
 
   <ItemGroup>
     <None Update="Data\Users.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Users.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
