--- a/ShoppingListApi/ShoppingListApi/ShoppingListApi.csproj
+++ b/ShoppingListApi/ShoppingListApi/ShoppingListApi.csproj
@@ -4,5 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.7" />
+  </ItemGroup>
+
 
 </Project>
