--- a/RecipeApp/RecipeApp.csproj
+++ b/RecipeApp/RecipeApp.csproj
@@ -9,6 +9,9 @@
     <None Update="Recipe.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Users.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
